Update CMAKE_BINARY_DIR in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,17 +247,17 @@ endif(${FORTE_TimeBaseUnitsPerSecond} GREATER ${MAX_TimeBaseUnitsPerSecond})
 GET_PROPERTY(FORTE_CUSTOM_CONFIGURATIONS_LOCAL GLOBAL PROPERTY FORTE_CUSTOM_CONFIGURATIONS_GLOBAL)
 
 #Create a file with the custom configurations first and read from it
-file(WRITE ${CMAKE_BINARY_DIR}/forte_custom_config.h.in ${FORTE_CUSTOM_CONFIGURATIONS_LOCAL})
-CONFIGURE_FILE(${CMAKE_BINARY_DIR}/forte_custom_config.h.in ${CMAKE_BINARY_DIR}/forte_custom_config.h)
-file(READ ${CMAKE_BINARY_DIR}/forte_custom_config.h FORTE_CUSTOM_CONFIGURATIONS_CONFIGURED)
-file(REMOVE ${CMAKE_BINARY_DIR}/forte_custom_config.h.in)
-file(REMOVE ${CMAKE_BINARY_DIR}/forte_custom_config.h)
+file(WRITE ${PROJECT_BINARY_DIR}/forte_custom_config.h.in ${FORTE_CUSTOM_CONFIGURATIONS_LOCAL})
+CONFIGURE_FILE(${PROJECT_BINARY_DIR}/forte_custom_config.h.in ${PROJECT_BINARY_DIR}/forte_custom_config.h)
+file(READ ${PROJECT_BINARY_DIR}/forte_custom_config.h FORTE_CUSTOM_CONFIGURATIONS_CONFIGURED)
+file(REMOVE ${PROJECT_BINARY_DIR}/forte_custom_config.h.in)
+file(REMOVE ${PROJECT_BINARY_DIR}/forte_custom_config.h)
 SET(FORTE_CUSTOM_CONFIGURATIONS ${FORTE_CUSTOM_CONFIGURATIONS_CONFIGURED})
 
-forte_add_include_directories(${CMAKE_BINARY_DIR})
-CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/forte_config.h.in ${CMAKE_BINARY_DIR}/forte_config.new.h)
-forte_replacefile_if_changed(${CMAKE_BINARY_DIR}/forte_config.new.h ${CMAKE_BINARY_DIR}/forte_config.h)
-file(REMOVE ${CMAKE_BINARY_DIR}/forte_config.new.h)
+forte_add_include_directories(${PROJECT_BINARY_DIR})
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/forte_config.h.in ${PROJECT_BINARY_DIR}/forte_config.new.h)
+forte_replacefile_if_changed(${PROJECT_BINARY_DIR}/forte_config.new.h ${PROJECT_BINARY_DIR}/forte_config.h)
+file(REMOVE ${PROJECT_BINARY_DIR}/forte_config.new.h)
 
 #######################################################################################
 # Check FORTE_ARCHITECTURE has a valid value
